# consultant-copilot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_tables.py  002_add_embeddings.py  003_add_telegram_tables.py  004_add_client_id_and_settings.py
config/: meeting_types.yaml
docs/: ARCHITECTURE.md  INTEGRATIONS.md  PROMPTS.md
scripts/: import_telegram_chats.py  init_db.sql  link_clients.py  migrate_notion.py  telegram_auth.py
src/: __init__.py  config.py
src/api/: main.py
src/api/routes/: __init__.py  clients.py  hypotheses.py  meetings.py  rag.py  summaries.py  webhooks.py
src/bot/: handlers.py  keyboards.py  main.py
src/dashboard/: __init__.py  app.py  utils.py
src/dashboard/pages/: 1_💬_Chat.py  2_⚙️_Settings.py  3_👥_Clients.py  4_📊_Stats.py
src/database/: __init__.py  connection.py  models.py  repository.py
src/integrations/: fireflies.py  telegram_history.py  todoist.py
src/qa_bot/: __init__.py  handlers.py  main.py
src/services/: __init__.py  chunking.py  embedding_service.py  rag_service.py  telegram_sync_service.py
src/summarizer/: __init__.py  engine.py
src/summarizer/prompts/: diagnostics.md  intro.md  traction.md  working_meeting.md
src/telegram_watcher/: __init__.py  catchup.py  handlers.py  main.py
tests/: conftest.py  test_repository.py
